<resources>
    <string name="app_name">Covid DI</string>
    <string name="StatTitle">Статистика</string>
    <string name="Test">Тест</string>
    <string name="Resultname">Результат</string>
    <string name="close">Закрыть</string>
    <string name="restart">Повторить</string>
    <string name="Youtake">Вы набрали</string>
    <string name="score">баллов</string>
    <string name="StatTitle2">Динамика заболеваемости</string>
    <string-array name="Country">

        <item>Россия</item>
        <item>Беларусь</item>
        <item>Франция</item>
        <item>Германия</item>
        <item>Англия</item>
    </string-array>
    <string-array name="CountryEn">
        <item>Russia</item>
        <item>Belarus</item>
        <item>France</item>
        <item>Germany</item>
        <item>United Kingdom</item>
    </string-array>

    <string name="ConfTitle">Заболевших</string>
    <string name="RecovTitle">Выздоровевших</string>
    <string name="DeathTitle">Смертей</string>
    <string name="Settings">Настройки</string>
    <string name="RUS">RUS</string>
    <string name="date">20.03.2021-27.03.2021</string>
    <string name="EN">EN</string>
    <string name="InfoBut">Ознакомьтесь с информацией о коронавирусе</string>
    <string name="TestBut">Пройдите тест на знание короновируса</string>



    <string name="ap_name">Настройки</string>
    <string name="Language">Язык</string>
    <string name="About_app">О приложении</string>
    <string name="Info_name">Актуальная информация о Covid-19</string>
    <string name="Obz_sved">COVID-19. Основная информация</string>
    <string name="info_obz">
        На сегодняшний день считается, что COVID-19 впервые передался
          человеку от летучих мышей. Случилось все это именно так или "посредником" вируса был кто-то другой
        -неизвестно.
Инкубационный период коронавируса: считается (!), Что инкубационный период длится до 14 дней.
          При исследовании, в котором приняло участие 1099
          пациента с подтвержденным диагнозом, в среднем
          инкубационный период COVID-19 составил четыре дня.
Исследование 181 пациента показало, что  в 2,5%
          случаев симптомы развиваются в течение 2,2 дней, а в 97,5% случаев
          - в течение 11,5 дней. Средний инкубационный период
          в этом исследовании составлял 5,1 дня.</string>

    <string name="Simp">
        На сегодняшний день мы не все знаем о
         пути передачи инфекции.
         Первоначально считалось, что первое заражение произошло на рынке морепродуктов в г.
         Ухань.
         Со временем путь передачи от человека к человеку подтвердился.
Считается, что основной путь передачи коронавируса - контактный. Чихание больного или кашель,
        распространяет частицы слизи, содержащие вирус. Радиус
         распространяться от человека в пределах 2 метров. В этом радиусе может случиться
         прямое заражение. За пределами этого радиуса происходит заражение
         при контакте с загрязненной поверхностью. Здоровый человек, трогая
         инфицированную поверхность, заражается вирусом, в дальнейшем, при прикосновении
         к лицу руками он переносит вирус на слизистые оболочки и
         происходит заражение.
    </string>
    <string name="About_razrab">
        Данный проект был выполнен студентами Технопарка
        Курс Аndroid 2021 весна
        Низовцев Роман
        Светашева Юлия
        Драгун Илья
        Мы очень старались!
    </string>
    <string name="Feedback">Обратная связь</string>
    <string name="Way">Пути передачи Covid-19</string>
    <string name="feed_back_click">
       Мы будем очень рады вашим отзывам и предложениям!
        Надеюсь наше приложение было для Вас полезным
        Получить ответы на интерисующие вопросы можете по этой почте
        tut_nichego_net@mail.ru
    </string>

    <string name="Simpom">Симпломы Covid-19</string>
    <string name="Simpom2">
   лихорадка в 99% случаев
     слабость, утомляемость в 70% случаев
     сухой кашель в 59% случаев
     потеря аппетита в 40% случаев
     мышечные боли в 35% случаев
     одышка в 31% случаев
     откашливание мокроты в 27% случаев
     Другие менее распространенные симптомы включают головную боль,
     боль в горле и ринорея (выделения из носа).
     Помимо респираторных симптомов, есть еще
     желудочно-кишечные симптомы, такие как тошнота и диарея.

    Как видите, самый частый симптом коронавирусной
     инфекции - это лихорадка. Но следует отметить, что высокая температура
     также не является гарантированным симптомом. Так, из 1099 пациентов, поступивших в больницу Ухани с
     COVID-19, температура выше 37,5 градусов наблюдалась только у 44% пациентов.</string>
    <string name="check">Проверить</string>
</resources>