<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/Info_name" />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="276dp"
                app:lottie_loop="true"
                app:lottie_fileName="virus.json"
                app:lottie_autoPlay="true"
                />

            <TextView
                android:id="@+id/textView6"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/Obz_sved"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:gravity="left"
                android:text="@string/info_obz"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="left"
                android:text="@string/Way"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:gravity="left"
                android:text="@string/Simp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView10"
                android:gravity="left"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:text="@string/Simpom"
                android:textSize="26sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="left"
                android:text="@string/Simpom2"
                android:textSize="18sp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="match_parent"
                android:layout_height="276dp"
                app:lottie_loop="true"
                app:lottie_fileName="covid_phones.json"
                app:lottie_autoPlay="true"
                />



        </LinearLayout>

    </ScrollView>
</LinearLayout>