<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Settings"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="16dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:background="@drawable/test_question"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lang"
                android:layout_marginLeft="8dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:text="@string/Language"
                android:textColor="@color/black"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="50dp"
                android:layout_height="28dp"
                android:layout_weight="1" />


            <Button
                android:id="@+id/rus"
                android:layout_width="110dp"
                android:layout_height="30dp"

                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@drawable/test_question1"
                android:text="@string/RUS"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/en"
                android:layout_width="110dp"
                android:layout_height="30dp"

                android:layout_gravity="center_vertical"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/test_question1"
                android:text="@string/EN"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/test_question"
android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/About_app"
                android:layout_width="match_parent"
                android:layout_height="70dp"

                android:background="@android:color/transparent"
                android:text="@string/About_app" />

            <Button
                android:id="@+id/button6"
                android:layout_width="300dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@drawable/line1" />

            <Button
                android:id="@+id/FeedBack"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@android:color/transparent"
                android:text="@string/Feedback" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>