<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_question">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/Resultname"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="386dp"
        android:layout_height="673dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="9"
            android:text="Результат"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/close"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:background="@drawable/ripple_effect"
                android:text="@string/close"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/restart"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:background="@drawable/ripple_effect"
                android:text="@string/restart"

                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>